add possibility to log exceptions correctly (#4)